final cleanup for now
